--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,6 +25,6 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation ('org.apache.commons:commons-math3:3.6.1')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
